# PokeELT

./: .gitignore  README.md  pyproject.toml  requirements.txt
PokeELT/extract_and_load/: README.md  ingest_data.py  poke_api_client.py  utils.py
PokeELT/transform/: README.md
